--- a/src/AntShares/AntShares.csproj
+++ b/src/AntShares/AntShares.csproj
@@ -37,6 +37,7 @@
     <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.0.2" />
+    <PackageReference Include="SimpleInjector" Version="4.0.8" />
     <PackageReference Include="System.Net.Sockets" Version="4.3.0" />
     <PackageReference Include="System.Security.SecureString" Version="4.0.0" />
   </ItemGroup>
