Finish testing AccountState size, clone, FromReplica, Serialize, and Deserialize

--- a/AntShares.UnitTests/AntShares.UnitTests.csproj
+++ b/AntShares.UnitTests/AntShares.UnitTests.csproj
@@ -39,6 +39,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AntShares.VM, Version=1.8.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="FluentAssertions, Version=4.19.2.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentAssertions.4.19.2\lib\net45\FluentAssertions.dll</HintPath>
     </Reference>
